UCSFD8-975 fixed link alignment

--- a/docroot/themes/custom/ucsf/assets/css/style.css
+++ b/docroot/themes/custom/ucsf/assets/css/style.css
@@ -5495,7 +5495,11 @@ figure.align-center {
 
 .news-center-banner {
   background: #fff;
-  position: relative; }
+  position: relative;
+  margin-top: 2.5rem; }
+  @media (min-width: 850px) {
+    .news-center-banner {
+      margin-top: 0; } }
 
 .news-center-banner__featured,
 .media-coverage__featured {
@@ -5590,8 +5594,16 @@ figure.align-center {
 
 .news-center-banner .link--cta-right {
   position: absolute;
-  right: 0;
-  top: -3rem; }
+  top: -9.5rem;
+  left: 20px; }
+  @media (min-width: 850px) {
+    .news-center-banner .link--cta-right {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      top: -3rem;
+      left: auto;
+      right: 4.5%; } }
 
 .news-center-banner_list {
   margin: 40px 20px; }
